users own messages now add to window as well. messages send on Enter. message entry box clears on message send. empty messages dont send. attempted to fix hover and touchstart issues on mobile.

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -148,8 +148,26 @@ input[type="password"] {
 
 
 
+// ALL MEDIA QUERIES
+@media (hover: none) {
+  *:hover {
+     color: inherit;
+    //  background-color: inherit;
+     scale: inherit;
+  }
+}
+
+
+
 @media only screen and (max-width: 1200px) {
 
+  // // disable hover on small devices
+  // *{
+  //   &:hover {
+  //     color: inherit !important;
+  //     background: inherit !important;
+  //   }
+  // }
 
   .welcome-page {
     height: 100vh;
